<resources>
    <string name="app_name">PoscuApps</string>
    <string name="logoposcusplash">LogoPoscuSplash</string>
    <string name="poscuapps">PoscuApps</string>
    <string name="poscu">poscu</string>
    <string name="gambarselamatdatang">GambarSelamatDatang</string>
    <string name="masuk">Masuk</string>
    <string name="daftar">Daftar</string>
    <string name="atau">atau</string>
    <string name="lanjutkan_dengan_google">Lanjutkan dengan Google</string>
    <string name="username_atau_nomor_telepon">Username atau nomor telepon</string>
    <string name="password">Kata Sandi</string>
    <string name="lupa_password">Lupa Password?</string>
    <string name="belum_punya_akun">Belum punya akun?</string>
    <string name="masukkan_username">Masukkan Username</string>
    <string name="masukkan_password">Masukkan Password</string>
    <string name="nama_lengkap">Nama lengkap</string>
    <string name="masukkan_nama_lengkap">Masukkan Nama Lengkap</string>
    <string name="email">Email</string>
    <string name="masukkan_email">Masukkan Email</string>
    <string name="nomor_handphone">Nomor handphone</string>
    <string name="masukkan_nomor_telepon">Masukkan Nomor Telepon</string>
    <string name="ulangi_kata_sandi">Ulangi Kata Sandi</string>
    <string name="sudah_punya_akun">Sudah punya akun?</string>
    <string name="identitas">Identitas</string>
    <string name="gambaruser">GambarUser</string>
    <string name="hai_silahkan_isi_data_pemilik_usaha">Hai, Silahkan isi data pemilik usaha</string>
    <string name="nama_usaha">Nama Usaha</string>
    <string name="masukkan_nama_usaha">Masukkan Nama Usaha</string>
    <string name="nomor_telepon_usaha">Nomor telepon usaha</string>
    <string name="masukkan_nomor_telepon_usaha">Masukkan Nomor Telepon Usaha</string>
    <string name="kota">Kota</string>
    <string name="masukkan_kota_usaha">Masukkan Kota Usaha</string>
    <string name="alamat_lengkap">Alamat lengkap</string>
    <string name="masukkan_alamat_lengkap">Masukkan Alamat Lengkap</string>
    <string name="selanjutnya">Selanjutnya</string>
    <string name="gambarkaryawan">GambarKaryawan</string>
    <string name="silahkan_isi_data_karyawan_anda">Silahkan isi data karyawan anda</string>
    <string name="nama">Nama</string>
    <string name="masukkan_nama_karyawan">Masukkan Nama Karyawan</string>
    <string name="data_karyawan_1">Data Karyawan 1</string>
    <string name="nomor_ponsel">Nomor ponsel</string>
    <string name="masukkan_nomor_ponsel">Masukkan Nomor Ponsel</string>
    <string name="gambarmenuutama">GambarMenuUtama</string>
    <string name="hei">Hei,</string>
    <string name="jeje_tupang">JEJE TUPANG</string>
    <string name="cucian_hari_ini">Cucian hari ini</string>
    <string name="_999_nota">999 Nota</string>
    <string name="outlet_utama">Outlet Utama</string>
    <string name="jeje_laundry">JEJE Laundri</string>
    <string name="proses_laundry">Proses Laundri</string>
    <string name="histori_laundri">Histori Laundri</string>
    <string name="pelanggan">Pelanggan</string>
    <string name="paket_laundri">Paket Laundri</string>
    <string name="laporan">Laporan</string>
    <string name="scan_qr_code">Scan QR Code</string>
    <string name="beranda">Beranda</string>
    <string name="kelola">Kelola</string>
    <string name="profile">Profile</string>
    <string name="tambahkan_transaksi">Tambahkan transaksi</string>
    <string name="nama_pelanggan">Nama pelanggan</string>
    <string name="contoh_sisca_br_tarigan">contoh : Sisca Br Tarigan</string>
    <string name="contoh_62_857_6340_2988">contoh : +62 857-6340-2988</string>
    <string name="contoh_ocean_nomor_4b">contoh : Ocean, Nomor 4B</string>
    <string name="kode_rak_simpan">Kode rak simpan</string>
    <string name="pewangi_baju">Pewangi baju</string>
    <string name="contoh_ya_parfum_downy">contoh : Ya, parfum downy</string>
    <string name="karyawan">Karyawan</string>
    <string name="tambah_karyawan">Tambah Karyawan</string>
    <string name="id_karyawan">ID Karyawan :</string>
    <string name="pk42125">PK42125</string>
    <string name="nomor_ktp">Nomor KTP</string>
    <string name="contoh_12070412040000001">contoh : 12070412040000001</string>
    <string name="alamat_tempat_tinggal">Alamat tempat tinggal</string>
    <string name="contoh_jl_rambutan_kutu_dukuh">contoh : Jl.Rambutan, Kutu Dukuh</string>
    <string name="contoh_poscuapp_gmail_com">contoh : poscuapp@gmail.com</string>
    <string name="contoh_poscuappsgoks123">contoh : PoscuAppsGoks123</string>
    <string name="gambarprofileuser">GambarProfileUser</string>
    <string name="selena_gomgom">Selena Gomgom</string>
    <string name="edit_profil">Edit Profil</string>
    <string name="set_printer">Set Printer</string>
    <string name="pengaturan">Pengaturan</string>
    <string name="keluar">Keluar</string>
    <string name="simpan_perubahan">Simpan Perubahan</string>
    <string name="tentang_poscu">Tentang Poscu</string>
    <string name="bagikan_aplikasi">Bagikan Aplikasi</string>
    <string name="bantuan">Bantuan</string>
    <string name="syarat_dan_ketentuan">Syarat dan Ketentuan</string>
    <string name="kebijakan_privasi">Kebijakan Privasi</string>
    <string name="hapus_akun">Hapus Akun</string>
</resources>
