<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuUtama">
    <LinearLayout
        android:id="@+id/BarAtas"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:background="@color/WarnaBiru"
        >
        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginStart="14dp"
            android:layout_marginEnd="8dp"
            android:layout_gravity="center_vertical"
            android:src="@drawable/poscuapplogoputih"
            android:contentDescription="@string/logoposcusplash"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="21dp"
            android:layout_gravity="center_vertical"
            android:text="@string/poscu"
            android:textSize="16sp"
            android:textColor="@color/WarnaPutih"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:fontFamily="@font/sfposcutext"
            />
    </LinearLayout>
    <RelativeLayout
        android:id="@+id/TempatDataDiriUser"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        app:layout_constraintTop_toBottomOf="@id/BarAtas"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:paddingTop="34dp"
        android:paddingLeft="31dp"
        android:paddingRight="31dp"
        android:background="@drawable/gelombang"
        >

        <ImageView
            android:id="@+id/GambarMenuUtama"
            android:layout_width="118dp"
            android:layout_height="114dp"
            android:src="@drawable/datakaryawan"
            android:contentDescription="@string/gambarmenuutama"
            />
        <TextView
            android:id="@+id/TempatNyapaUser"
            android:layout_toEndOf="@id/GambarMenuUtama"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:layout_marginStart="21dp"
            android:text="@string/hei"
            android:textSize="18sp"
            android:textColor="@color/WarnaPutih"
            android:fontFamily="@font/sfposcutext"
            />
        <TextView
            android:id="@+id/TempatNamaUser"
            android:layout_toEndOf="@id/TempatNyapaUser"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:layout_marginStart="5dp"
            android:text="@string/jeje_tupang"
            android:textSize="18sp"
            android:textColor="@color/WarnaPutih"
            android:textAllCaps="true"
            android:fontFamily="@font/sfposcutext"
            />
        <TextView
            android:id="@+id/CucianHariIni"
            android:layout_toEndOf="@id/GambarMenuUtama"
            android:layout_below="@id/TempatNyapaUser"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:layout_marginTop="5dp"
            android:layout_marginStart="21dp"
            android:text="@string/cucian_hari_ini"
            android:textSize="18sp"
            android:textColor="@color/WarnaPutih"
            android:fontFamily="@font/sfposcutext"
            />
        <TextView
            android:id="@+id/JumlahNotanya"
            android:layout_toEndOf="@id/GambarMenuUtama"
            android:layout_below="@id/CucianHariIni"
            android:layout_marginTop="5dp"
            android:layout_marginStart="21dp"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:text="@string/_999_nota"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/WarnaPutih"
            android:fontFamily="@font/sfposcutext"
            />
        <TextView
            android:id="@+id/TempatAlamatUser"
            android:layout_toEndOf="@id/GambarMenuUtama"
            android:layout_below="@id/JumlahNotanya"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginStart="21dp"
            android:text="@string/outlet_utama"
            android:textSize="12sp"
            android:textColor="@color/WarnaPutih"
            android:fontFamily="@font/sfposcutext"
            />
        <TextView
            android:id="@+id/NamaLaundrynya"
            android:layout_toEndOf="@id/TempatAlamatUser"
            android:layout_below="@id/JumlahNotanya"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginStart="5dp"
            android:text="@string/jeje_laundry"
            android:textAllCaps="true"
            android:textSize="12sp"
            android:textColor="@color/WarnaPutih"
            android:fontFamily="@font/sfposcutext"
            />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>