<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/WarnaPutihDua"
    tools:context=".FormTambahKaryawan">

    <ImageView
        android:id="@+id/GambarTambahKaryawan"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:background="@drawable/custome_shape_tambah_transaksi"
        android:contentDescription="@string/tambah_karyawan"
        />
    <RelativeLayout
        android:id="@+id/TempatTambahKaryawan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:background="@drawable/custome_shape_datadiri"
        android:layout_marginTop="34dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:elevation="10dp"
        >
        <TextView
            android:id="@+id/IDKaryawan"
            android:layout_width="wrap_content"
            android:layout_height="19dp"
            android:layout_marginTop="18dp"
            android:layout_marginStart="20dp"
            android:text="@string/id_karyawan"
            android:textSize="14sp"
            android:textColor="@color/WarnaAbuAbu"
            android:fontFamily="@font/sfposcutext"
            />
        <TextView
            android:id="@+id/TempatIDKaryawan"
            android:layout_toEndOf="@id/IDKaryawan"
            android:layout_width="wrap_content"
            android:layout_height="19dp"
            android:layout_marginTop="18dp"
            android:layout_marginStart="20dp"
            android:text="@string/pk42125"
            android:textSize="14sp"
            android:textColor="@color/WarnaBiru"
            android:fontFamily="@font/sfposcutext"
            />
        <TextView
            android:id="@+id/InputTambahNamaKaryawan"
            android:layout_below="@id/IDKaryawan"
            android:layout_width="wrap_content"
            android:layout_height="19dp"
            android:layout_marginTop="18dp"
            android:layout_marginStart="20dp"
            android:text="@string/nama"
            android:textSize="14sp"
            android:textColor="@color/WarnaAbuAbu"
            android:fontFamily="@font/sfposcutext"
            />
        <EditText
            android:id="@+id/TempatInputTambahNamaKaryawan"
            android:layout_below="@id/InputTambahNamaKaryawan"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/custome_shape_tombol_input_login"
            android:fontFamily="@font/sfposcutext"
            android:inputType="text"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:textColor="@color/WarnaHitamTiga"
            android:textSize="18sp"
            android:hint="@string/contoh_sisca_br_tarigan"
            android:autofillHints="@string/contoh_sisca_br_tarigan"
            />
        <TextView
            android:id="@+id/InputTambahNomorPonselKaryawan"
            android:layout_below="@id/TempatInputTambahNamaKaryawan"
            android:layout_width="wrap_content"
            android:layout_height="19dp"
            android:layout_marginTop="18dp"
            android:layout_marginStart="20dp"
            android:text="@string/nomor_ponsel"
            android:textSize="14sp"
            android:textColor="@color/WarnaAbuAbu"
            android:fontFamily="@font/sfposcutext"
            />
        <EditText
            android:id="@+id/TempatInputTambahNomorPonselKaryawan"
            android:layout_below="@id/InputTambahNomorPonselKaryawan"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/custome_shape_tombol_input_login"
            android:fontFamily="@font/sfposcutext"
            android:inputType="phone"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:textColor="@color/WarnaHitamTiga"
            android:textSize="18sp"
            android:hint="@string/contoh_62_857_6340_2988"
            android:autofillHints="@string/contoh_62_857_6340_2988"
            />
        <TextView
            android:id="@+id/InputNomorKTP"
            android:layout_below="@id/TempatInputTambahNomorPonselKaryawan"
            android:layout_width="wrap_content"
            android:layout_height="19dp"
            android:layout_marginTop="18dp"
            android:layout_marginStart="20dp"
            android:text="@string/nomor_ktp"
            android:textSize="14sp"
            android:textColor="@color/WarnaAbuAbu"
            android:fontFamily="@font/sfposcutext"
            />
        <EditText
            android:id="@+id/TempatInputNomorKTP"
            android:layout_below="@id/InputNomorKTP"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/custome_shape_tombol_input_login"
            android:fontFamily="@font/sfposcutext"
            android:inputType="number"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:textColor="@color/WarnaHitamTiga"
            android:textSize="18sp"
            android:hint="@string/contoh_12070412040000001"
            android:autofillHints="@string/contoh_12070412040000001"
            />
        <TextView
            android:id="@+id/InputTambahAlamatKaryawan"
            android:layout_below="@id/TempatInputNomorKTP"
            android:layout_width="wrap_content"
            android:layout_height="19dp"
            android:layout_marginTop="18dp"
            android:layout_marginStart="20dp"
            android:text="@string/alamat_tempat_tinggal"
            android:textSize="14sp"
            android:textColor="@color/WarnaAbuAbu"
            android:fontFamily="@font/sfposcutext"
            />
        <EditText
            android:id="@+id/TempatInputTambahAlamatKaryawan"
            android:layout_below="@id/InputTambahAlamatKaryawan"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/custome_shape_tombol_input_login"
            android:fontFamily="@font/sfposcutext"
            android:inputType="text"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:textColor="@color/WarnaHitamTiga"
            android:textSize="18sp"
            android:hint="@string/contoh_jl_rambutan_kutu_dukuh"
            android:autofillHints="@string/contoh_jl_rambutan_kutu_dukuh"
            />
        <TextView
            android:id="@+id/InputTambahEmailKaryawan"
            android:layout_below="@id/TempatInputTambahAlamatKaryawan"
            android:layout_width="wrap_content"
            android:layout_height="19dp"
            android:layout_marginTop="18dp"
            android:layout_marginStart="20dp"
            android:text="@string/email"
            android:textSize="14sp"
            android:textColor="@color/WarnaAbuAbu"
            android:fontFamily="@font/sfposcutext"
            />
        <EditText
            android:id="@+id/TempatInputTambahEmailKaryawan"
            android:layout_below="@id/InputTambahEmailKaryawan"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/custome_shape_tombol_input_login"
            android:fontFamily="@font/sfposcutext"
            android:inputType="textEmailAddress"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:textColor="@color/WarnaHitamTiga"
            android:textSize="18sp"
            android:hint="@string/contoh_poscuapp_gmail_com"
            android:autofillHints="@string/contoh_poscuapp_gmail_com"
            />
        <TextView
            android:id="@+id/InputTambahPasswordKaryawan"
            android:layout_below="@id/TempatInputTambahEmailKaryawan"
            android:layout_width="wrap_content"
            android:layout_height="19dp"
            android:layout_marginTop="18dp"
            android:layout_marginStart="20dp"
            android:text="@string/password"
            android:textSize="14sp"
            android:textColor="@color/WarnaAbuAbu"
            android:fontFamily="@font/sfposcutext"
            />
        <EditText
            android:id="@+id/TempatInputTambahPasswordKaryawan"
            android:layout_below="@id/InputTambahPasswordKaryawan"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/custome_shape_tombol_input_login"
            android:fontFamily="@font/sfposcutext"
            android:inputType="textPassword"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:textColor="@color/WarnaHitamTiga"
            android:textSize="18sp"
            android:hint="@string/contoh_poscuappsgoks123"
            android:autofillHints="@string/contoh_poscuappsgoks123"
            />
        <Button
            android:id="@+id/TombolDiTambahKaryawan"
            android:layout_below="@id/TempatInputTambahPasswordKaryawan"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/custome_shape_tombol_masuk"
            android:fontFamily="@font/sfposcutext"
            android:text="@string/selanjutnya"
            android:textAllCaps="false"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/WarnaBiruTua"
            />
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>