<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/WarnaBiru"
    tools:context=".UserData">
    <ImageView
        android:id="@+id/GambarUser"
        android:layout_width="122dp"
        android:layout_height="118dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="35dp"
        android:src="@drawable/datadiri"
        android:contentDescription="@string/gambaruser"
        />
    <TextView
        android:id="@+id/PetunjukIsiDataDiri"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        app:layout_constraintTop_toBottomOf="@id/GambarUser"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="17dp"
        android:text="@string/hai_silahkan_isi_data_pemilik_usaha"
        android:textColor="@color/WarnaPutih"
        android:textSize="18sp"
        android:fontFamily="@font/sfposcutext"
        />
    <RelativeLayout
        android:id="@+id/TempatInputDataDiri"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/PetunjukIsiDataDiri"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="34dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/custome_shape_datadiri">

        <TextView
            android:id="@+id/InputNamaUsaha"
            android:layout_width="wrap_content"
            android:layout_height="19dp"
            android:layout_marginTop="18dp"
            android:layout_marginStart="20dp"
            android:text="@string/nama_usaha"
            android:textSize="14sp"
            android:textColor="@color/WarnaAbuAbuDua"
            android:fontFamily="@font/sfposcutext"
            />
        <EditText
            android:id="@+id/TempatInputNamaUsaha"
            android:layout_below="@id/InputNamaUsaha"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/custome_shape_tombol_input_login"
            android:fontFamily="@font/sfposcutext"
            android:inputType="text"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:textColor="@color/WarnaHitamTiga"
            android:textSize="18sp"
            android:hint="@string/masukkan_nama_usaha"
            android:autofillHints="@string/masukkan_nama_usaha"
            />
        <TextView
            android:id="@+id/InputNomorTeleponUsaha"
            android:layout_below="@id/TempatInputNamaUsaha"
            android:layout_width="wrap_content"
            android:layout_height="19dp"
            android:layout_marginTop="18dp"
            android:layout_marginStart="20dp"
            android:text="@string/nomor_telepon_usaha"
            android:textSize="14sp"
            android:textColor="@color/WarnaAbuAbuDua"
            android:fontFamily="@font/sfposcutext"
            />
        <EditText
            android:id="@+id/TempatInputNomorTeleponUsaha"
            android:layout_below="@id/InputNomorTeleponUsaha"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/custome_shape_tombol_input_login"
            android:fontFamily="@font/sfposcutext"
            android:inputType="phone"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:textColor="@color/WarnaHitamTiga"
            android:textSize="18sp"
            android:hint="@string/masukkan_nomor_telepon_usaha"
            android:autofillHints="@string/masukkan_nomor_telepon_usaha"
            />
        <TextView
            android:id="@+id/InputKota"
            android:layout_below="@id/TempatInputNomorTeleponUsaha"
            android:layout_width="wrap_content"
            android:layout_height="19dp"
            android:layout_marginTop="18dp"
            android:layout_marginStart="20dp"
            android:text="@string/kota"
            android:textSize="14sp"
            android:textColor="@color/WarnaAbuAbuDua"
            android:fontFamily="@font/sfposcutext"
            />
        <EditText
            android:id="@+id/TempatInputKota"
            android:layout_below="@id/InputKota"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/custome_shape_tombol_input_login"
            android:fontFamily="@font/sfposcutext"
            android:inputType="text"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:textColor="@color/WarnaHitamTiga"
            android:textSize="18sp"
            android:hint="@string/masukkan_kota_usaha"
            android:autofillHints="@string/masukkan_kota_usaha"
            />
        <TextView
            android:id="@+id/InputAlamatLengkap"
            android:layout_below="@id/TempatInputKota"
            android:layout_width="wrap_content"
            android:layout_height="19dp"
            android:layout_marginTop="18dp"
            android:layout_marginStart="20dp"
            android:text="@string/alamat_lengkap"
            android:textSize="14sp"
            android:textColor="@color/WarnaAbuAbuDua"
            android:fontFamily="@font/sfposcutext"
            />
        <EditText
            android:id="@+id/TempatInputAlamatLengkap"
            android:layout_below="@id/InputAlamatLengkap"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/custome_shape_tombol_input_login"
            android:fontFamily="@font/sfposcutext"
            android:inputType="text"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:textColor="@color/WarnaHitamTiga"
            android:textSize="18sp"
            android:hint="@string/masukkan_alamat_lengkap"
            android:autofillHints="@string/masukkan_alamat_lengkap"
            />
        <Button
            android:id="@+id/TombolDiUserData"
            android:layout_below="@id/TempatInputAlamatLengkap"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/custome_shape_tombol_masuk"
            android:fontFamily="@font/sfposcutext"
            android:text="@string/selanjutnya"
            android:textAllCaps="false"
            android:textSize="18sp"
            />
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>