<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/WarnaPutih"
    tools:context=".SplashScreen">
    
    <ImageView
        android:id="@+id/LogoPoscu"
        android:layout_width="200dp"
        android:layout_height="200dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:background="@drawable/poscuapplogo"
        android:contentDescription="@string/logoposcusplash"
        />
    <TextView
        android:id="@+id/NamaPoscu"
        android:layout_width="110dp"
        android:layout_height="40dp"
        app:layout_constraintTop_toBottomOf="@id/LogoPoscu"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:gravity="center"
        android:text="@string/poscu"
        android:textSize="30sp"
        android:textColor="@color/WarnaBiru"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:fontFamily="@font/sfposcutext"
        android:contentDescription="@string/poscuapps"
        />

</androidx.constraintlayout.widget.ConstraintLayout>